--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/39872b7f1b.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- header starts -->
 
+    <header>
+        <nav class="menu">
+            <div class="menu-title">
+                <h3>Influencer products</h3>
+            </div>
+            <div class="menubar">
+                <a class="menubar-item" href="">Home</a>
+                <a class="menubar-item" href="">Products</a>
+                <a class="menubar-item" href="">Sign up</a>
+                <a class="menubar-item" href="">Log in</a>
+                <i class="fa fa-magnifying-glass menubar-item"></i>
+                <i class="fa fa-cart-shopping menubar-item"></i>
+            </div>
+        </nav>
+    </header>
+
+    <!-- header ends -->
+    <!-- main starts -->
+    <!-- main ends -->
+    <!-- footer starts -->
+    <!-- footer ends -->
 </body>
 
 </html>
