--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- header starts -->
 
-    <header>
+    <header class="container">
         <nav class="menu">
             <div class="menu-title">
                 <h3>Influencer products</h3>
@@ -29,6 +29,17 @@
                 <i class="fa fa-cart-shopping menubar-item"></i>
             </div>
         </nav>
+        <section class="title-section">
+            <div class="title-content">
+                <h1 class="title-text">Start your Journey as Influencer</h1>
+                <p class="title-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                    vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn">Preebook now <i class="fa fa-arrow-right"></i></button>
+            </div>
+            <div class="title-img">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </section>
     </header>
 
     <!-- header ends -->
