--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
                 <img src="./images/main-camera.png" alt="">
             </div>
         </section>
+        <div class="company-logos">
+            <div class="logos">
+                <img src="./logos/Alibaba.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Amazon.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Ebay.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Rakuten.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Target.svg" alt="">
+            </div>
+            <div class="logos">
+                <img src="./logos/Walmart.svg" alt="">
+            </div>
+        </div>
     </header>
 
     <!-- header ends -->
