collection section done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="./images/main-camera.png" alt="">
             </div>
         </section>
-        <div class="company-logos">
+        <div class="company-logos inside-container">
             <div class="logos">
                 <img src="./logos/Alibaba.svg" alt="">
             </div>
@@ -67,6 +67,175 @@
 
     <!-- header ends -->
     <!-- main starts -->
+    <main class="container">
+        <section class="collection-section">
+            <h3>Popular Collection</h3>
+            <div class="collections inside-container">
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/tripod.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/mic.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/airpod.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/drone.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/lights.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/setup.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/camera.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/single-light.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-img">
+                        <img src="/images/action.png" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2 class="item-title">Flex Tripod</h2>
+                        <h4 class="item-title">$50.48</h4>
+                        <p class="item-text">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <span>4.99</span>
+                        </p class="item-text">
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- main ends -->
     <!-- footer starts -->
     <!-- footer ends -->
