--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="collections inside-container">
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/tripod.png" alt="">
+                        <img src="./images/tripod.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -85,13 +85,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/mic.png" alt="">
+                        <img src="./images/mic.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -103,13 +104,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/airpod.png" alt="">
+                        <img src="./images/airpod.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -121,13 +123,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/drone.png" alt="">
+                        <img src="./images/drone.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -139,13 +142,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/lights.png" alt="">
+                        <img src="./images/lights.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -157,13 +161,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/setup.png" alt="">
+                        <img src="./images/setup.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -175,13 +180,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/camera.png" alt="">
+                        <img src="./images/camera.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -193,13 +199,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/single-light.png" alt="">
+                        <img src="./images/single-light.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -211,13 +218,14 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item-img">
-                        <img src="/images/action.png" alt="">
+                        <img src="./images/action.png" alt="">
                     </div>
                     <div class="item-info">
                         <h2 class="item-title">Flex Tripod</h2>
@@ -229,8 +237,9 @@
                             <i class="fa fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i>
                             <span>4.99</span>
-                        </p class="item-text">
-                        <p>Wordwide shifting available Buyers protection possible!</p>
+                        </p>
+                        <p class="item-text">Wordwide shifting available</p>
+                        <p class="item-text">Buyers protection possible!</p>
                     </div>
                 </div>
             </div>
