--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
     </main>
     <!-- main ends -->
     <!-- footer starts -->
+    <footer class="footer-section">
+        <div class="footer-content">
+            <h3>Influencer products</h3>
+            <p class="item-text">Copyright &copy; 2020 influencer products</p>
+            <p class="item-text">All rights reserved</p>
+        </div>
+        <div class="social-icon">
+            <a class="icon" href=""><i class="fa-brands fa-instagram"></i></a>
+            <a class="icon" href=""><i class="fa-brands fa-twitter"></i></a>
+            <a class="icon" href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
     <!-- footer ends -->
 </body>
 
