responsive style add

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 
     <header class="container">
         <nav class="menu">
+            <div class="responsive-mmenubar">
+                <a href=""><i class="fa-solid fa-bars"></i></a>
+            </div>
             <div class="menu-title">
                 <h3>Influencer products</h3>
             </div>
             <div class="menubar">
-                <a class="menubar-item" href="">Home</a>
-                <a class="menubar-item" href="">Products</a>
-                <a class="menubar-item" href="">Sign up</a>
-                <a class="menubar-item" href="">Log in</a>
-                <i class="fa fa-magnifying-glass menubar-item"></i>
-                <i class="fa fa-cart-shopping menubar-item"></i>
+                <a class="menubar-item responsive-menubar-item" href="">Home</a>
+                <a class="menubar-item responsive-menubar-item" href="">Products</a>
+                <a class="menubar-item responsive-menubar-item" href="">Sign up</a>
+                <a class="menubar-item responsive-menubar-item" href="">Log in</a>
+                <i class="fa fa-magnifying-glass menubar-item responsive-menubar-item"></i>
+                <i class="fa fa-cart-shopping menubar-item  abc"></i>
             </div>
         </nav>
         <section class="title-section">
